fix: update fonts to be more legible

--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+@plugin '@tailwindcss/typography';
 /* @import "shadcn/tailwind.css"; */
 
 @custom-variant dark (&:is(.dark *));
@@ -12,13 +13,46 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-Italic.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/JetBrainsMono-MediumItalic.woff2') format('woff2');
+  font-weight: 500;
+  font-display: swap;
+  font-style: italic;
+}
+
 @theme {
   --font-mono: 'Cairopixel', var(--font-mono);
 }
 
 @theme inline {
   --font-sans: 'Helvetica', var(--font-sans);
-  --font-mono: 'Cairopixel', var(--font-mono);
+  --font-pixel: 'Cairopixel', var(--font-mono);
+  --font-mono: 'JetBrains Mono', var(--font-mono);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
